# total3-limits-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
configs/: config.json.example
src/: binance.rs  config.rs  error.rs  main.rs  order_book.rs  redis.rs  state.rs  telegram.rs
