[package]
name = "limits-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["gzip", "json"] }
log = "0.4"
env_logger = "0.11.8"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "rt"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
rust_decimal = "1.37.2"
teloxide = { version = "0.17.0", features = ["macros"] }
chrono = "0.4.42"
redis = { version = "0.32.6", features = ["aio", "tokio-comp"] }
numfmt = "1.2"
